--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                         <div class="footer__copyright__text">
                             <p>
                                 Copyright &copy; 2020-
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This site designed with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://chinmayroy.com" target="_blank">Chinmay</a>
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This site designed with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://chinmayroy.github.io" target="_blank">Chinmay</a>
                             </p>
                         </div>
                         <div class="footer__copyright__payment"><img src="img/payment-item.png" alt="payment-method"></div>
